# plugin-filehost

./: LICENSE  README.md  bot.py  pyproject.toml
nonebot_plugin_filehost/: __init__.py  config.py
src/nonebot_plugin_filehost/: __init__.py  config.py  models.py  plugin_config.py
src/plugins/nonebot_plugin_filehost/: __init__.py  config.py  models.py
src/plugins/testing/: __init__.py
