[tool.poetry]
name = "nonebot-plugin-filehost"
version = "0.1.1"
description = "A HTTP static file hosting plugin for NoneBot2, which provides an graceful solution for cross-machine file transfer."
license = "MIT"
authors = ["Mix <mnixry@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/mnixry/nonebot-plugin-filehost"
packages = [{ include = './src/plugins/nonebot_plugin_filehost' }]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.4"
flake8 = "^3.9.2"
black = "^21.9b0"
mypy = "^0.910"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebug = "^0.2.1"

[nonebot.plugins]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
