[project]
name = "nonebot-plugin-filehost"
version = "1.0.0"
description = "Effortless static file hosting plugin for NoneBot2."
authors = [{ name = "Mix", email = "32300164+mnixry@users.noreply.github.com" }]
dependencies = ["nonebot2[fastapi]>=2.0.0", "anyio>=3"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
