[project]
name = "nonebot-plugin-filehost"
version = "1.1.1"
description = "Effortless static file hosting plugin for NoneBot2."
authors = [{ name = "Mix", email = "32300164+mnixry@users.noreply.github.com" }]
dependencies = ["nonebot2[fastapi]>=2.2.0", "anyio>=3"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }

typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"